# GildedRose-Refactoring-Kata-cpp

./: CMakeLists.txt  README.md
src/: GildedRose.cc  GildedRose.h
test/: CMakeLists.txt
test/cpp_gtest/: CMakeLists.txt  CashierTests.cc
test/cpp_texttest/: CMakeLists.txt
